websocket server and logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,19 @@ cmake_minimum_required(VERSION 3.0)
 
 project(overtelord9000)
 
-add_executable(overtelord9000 src/main.cpp)
+add_executable(overtelord9000 src/main.cpp src/websocket/websocketserver.cpp)
 
 install(TARGETS overtelord9000 RUNTIME DESTINATION bin)
 include_directories("/opt/vcpkg/installed/x64-linux/include/")
-find_package(dpp REQUIRED)
+find_package(dpp CONFIG REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(Opus CONFIG REQUIRED)
 find_package(ZLIB REQUIRED)
 find_package(unofficial-sodium CONFIG REQUIRED)
+find_package(websocketpp CONFIG REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
+target_link_libraries(overtelord9000 PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
+target_link_libraries(overtelord9000 PRIVATE websocketpp::websocketpp)
 target_link_libraries(overtelord9000 PRIVATE unofficial-sodium::sodium unofficial-sodium::sodium_config_public)
 target_link_libraries(overtelord9000 PRIVATE ZLIB::ZLIB)
 target_link_libraries(overtelord9000 PRIVATE Opus::opus)
